# dasa

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CLI.md  DESIGN.md  EVAL.md  FORMAT.md  INTEGRATION.md  PLAN.md  PROBLEMS.md  index.md
docs/sprints/: README.md  SPRINT-00.md  SPRINT-01.md  SPRINT-02.md  SPRINT-03.md  SPRINT-04.md  SPRINT-05.md  SPRINT-06.md  SPRINT-07.md
eval/: README.md
eval/data/: generate_sales.py  sales.csv
eval/harness/: __init__.py  agent.py  checker.py  claude_agent.py  metrics.py  runner.py
eval/notebooks/: broken.ipynb  clean.ipynb  complex.ipynb  messy.ipynb  unreproducible.ipynb
eval/tasks/bug_fixing/: BF-01.json  BF-02.json  BF-03.json
eval/tasks/data_understanding/: DU-01.json  DU-02.json  DU-03.json
eval/tasks/dependency_reasoning/: DR-01.json  DR-02.json
eval/tasks/reproducibility/: RP-01.json  RP-02.json
eval/tasks/state_recovery/: SR-01.json  SR-02.json
eval/tasks/visualization/: VZ-01.json  VZ-02.json
example/: README.md  analysis.ipynb
example/data/: generate_data.py  sales.csv
examples/: README.md  sample_analysis.ipynb
skills/notebook/: SKILL.md
src/dasa/: __init__.py
src/dasa/analysis/: __init__.py  deps.py  error_context.py  parser.py  profiler.py  state.py
src/dasa/cli/: __init__.py  add.py  async_runner.py  cancel.py  cells.py  check.py  context.py  delete.py  deps.py  edit.py  info.py  kernel.py  main.py  mcp_serve.py  move.py  outputs.py  profile.py  replay.py  result.py  run.py  stale.py  status.py  validate.py  vars.py
tests/: __init__.py  conftest.py  test_analysis.py  test_context_cli.py  test_improvements.py  test_jobs.py  test_marimo.py  test_notebook.py  test_parser.py  test_replay.py  test_session.py  test_sprint6.py
tests/test_analysis/: test_deps.py  test_parser.py  test_state.py
tests/test_cli/: test_add.py  test_cancel.py  test_cells.py  test_delete.py  test_edit.py  test_info.py  test_kernel.py  test_main.py  test_mcp_serve.py  test_move.py  test_outputs.py  test_result.py  test_stale.py  test_status.py  test_vars.py
tests/test_mcp/: test_server.py
tests/test_notebook/: __init__.py  test_jupyter.py  test_marimo.py
(+16 files in other folders)
