[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dasa"
version = "0.1.0"
description = "Data Science Agent toolkit for notebook-based workflows"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "DASA Team" }
]
keywords = ["jupyter", "notebook", "data-science", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "nbformat>=5.9",
    "nbclient>=0.10",
    "jupyter-client>=8.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
dasa = "dasa.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dasa"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
